# ezels-oor

./: .env.example  .gitignore  README.md  justfile
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  repository.py  schemas.py  services.py  worker.py
backend/tests/: test_api.py  test_config.py  test_services.py  test_worker.py
data/: ezelsoor.db
device/: README.md
docs/: README.md  architecture.md
frontend/: .env.example  README.md  api_client.py  app.py  audio_recorder.py  config.py  pyproject.toml  requirements.txt
frontend/templates/: about.html  base.html  history.html  index.html  participants.html  record.html  recording_detail.html
infra/: README.md
pi-client/: .env.example  README.md  app.py  audio_recorder.py  pyproject.toml
pi-client/static/: app.js  style.css
pi-client/templates/: index.html
samples/: README.md
samples/test-data/: 1320-122617-0022.expected.json  260-123286-0000.expected.json  7729-102255-0039.expected.json  README.md  api-responses.json  manifest.json  multi-speaker-sequence.expected.json  multi-speaker-sequence.flac
shared/contracts/: README.md  openapi.yaml  recording-upload.md
