[project]
name = "meeting-transcription-dashboard"
version = "0.1.0"
description = "A web dashboard for displaying audio transcription, summary, and action points data from a backend API"
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "Flask==3.0.0",
    "requests==2.31.0",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "Werkzeug==3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
